syntax = "proto3";
package eqs;

service Inclusion {
    rpc GetKeccakInclusion(GetKeccakInclusionRequest) returns (GetKeccakInclusionResponse);
}
message GetKeccakInclusionRequest {
    bytes commitment = 1;  // 32 byte blob commitment
    bytes namespace = 2;   // 32 byte namespace
    uint64 height = 3;     // block height
}

message GetKeccakInclusionResponse {
    enum Status {
        WAITING = 0;
        COMPLETE = 1; 
        FAILED = 2;
    }
    Status status = 1;
}
